--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,28 @@
+/*GENERAL*/
+*{
+  padding: 0;
+  margin:0;
+}
+
+/*MENU*/
+.menu{
+  background-color: #333;
+  padding-bottom: 15px;
+}
+.menu h2{
+  display: inline-block;
+}
 ul {
+  display: inline-block;
+  float: right;
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #333;
 }
 
 li {
-  float: left;
+  float: right;
 }
 
 li a {
@@ -18,7 +33,7 @@ li a {
   text-decoration: none;
 }
 
-/* Change the link color to #111 (black) on hover */
+/* Cambiamos el color al hover cuando pasa el mouse por ensima de link. */
 li a:hover {
   background-color: #111;
 }
